--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.1.1",
     "firebaseui": "^5.0.0",
     "framer-motion": "^4.1.17",
+    "nanoid": "^3.1.30",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
